--- a/app/src/main/res/layout/diagnosis_information_section.xml
+++ b/app/src/main/res/layout/diagnosis_information_section.xml
@@ -37,6 +37,7 @@
         <!-- Helper text -->
         <TextView
             style="@style/TextPrimary"
+            android:textSize="20sp"
             android:layout_marginTop="48dp"
             android:layout_marginStart="24dp"
             android:layout_marginEnd="24dp"
