--- a/app/src/main/res/layout/connect_suggestion_section.xml
+++ b/app/src/main/res/layout/connect_suggestion_section.xml
@@ -79,12 +79,11 @@
 
                 <!-- Connecting progress bar -->
                 <ProgressBar
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                     android:indeterminate="true"
-                    android:visibility="@{vm.connectingInProgress ? View.VISIBLE : View.GONE}"
-                    />
+                    android:visibility="@{vm.connectingInProgress ? View.VISIBLE : View.GONE}" />
 
             </LinearLayout>
 
