--- a/app/src/main/res/layout/diagnosis_center_control_section.xml
+++ b/app/src/main/res/layout/diagnosis_center_control_section.xml
@@ -80,8 +80,8 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.8"
-            android:max="@{vm.progressMax}"
-            android:progress="@{vm.progress}"
+            android:max="@{(int)vm.progressMax}"
+            android:progress="@{(int)vm.progress}"
             tools:progress="100"/>
 
         <!-- Right -->
