Use product flavor.

--- a/app/src/main/res/layout/report_item.xml
+++ b/app/src/main/res/layout/report_item.xml
@@ -40,6 +40,7 @@
         android:padding="12dp">
 
         <!-- Date and time -->
+        <!-- TODO toLocaleString is deprecated-->
         <TextView
             style="@style/TextPrimary"
             android:id="@+id/datetime"
