--- a/app/src/main/res/drawable/circular_progress_background.xml
+++ b/app/src/main/res/drawable/circular_progress_background.xml
@@ -25,6 +25,6 @@
     android:thickness="5dp"
     android:useLevel="false">
 
-    <solid android:color="#AAC0C0C0" />
+    <solid android:color="@color/backgroundLittleDark" />
 
 </shape>
