--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -41,4 +41,9 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- Splash theme. -->
+    <style name="SplashTheme" parent="AppBaseThemeDark">
+        <item name="android:windowBackground">@drawable/splash_background_light</item>
+    </style>
+
 </resources>
