Report detail layout separated.

--- a/app/src/main/res/layout/report_detail_fragment.xml
+++ b/app/src/main/res/layout/report_detail_fragment.xml
@@ -22,311 +22,13 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <!-- Date -->
-            <LinearLayout
-                android:layout_weight="1"
-                android:padding="12dp"
-                android:id="@+id/date_group"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center_horizontal">
+            <include
+                layout="@layout/report_detail_upper_part"
+                app:vm="@{vm}" />
 
-                <!-- Label -->
-                <TextView
-                    android:textColor="?android:attr/colorPrimary"
-                    android:textSize="18sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/description_measure_date" />
-
-                <!-- Content -->
-                <TextView
-                    android:textColor="?android:attr/textColorPrimary"
-                    android:textStyle="bold"
-                    android:textSize="28sp"
-                    android:id="@+id/date"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/datetime"
-                    android:text="2020년 5월 23일" />
-
-            </LinearLayout>
-
-            <!-- Static -->
-            <LinearLayout
-                android:layout_weight="1"
-                android:padding="12dp"
-                android:id="@+id/static_group"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center_horizontal">
-
-                <!-- Label -->
-                <TextView
-                    android:layout_gravity="center"
-                    android:textColor="?android:attr/colorPrimary"
-                    android:textSize="18sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="정적 분석" />
-
-                <TextView
-                    android:gravity="center"
-                    style="@style/TextPrimary"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="몸의 무게중심이 왼쪽으로 치우쳐져 있는 경향이 보입니다. 또한 현재 양쪽 발에 실리는 힘의 차이가 많은 것으로 보아 척추측만증을 의심해볼 수                                                                                    있습니다."/>
-
-            </LinearLayout>
-
-            <!-- Walk -->
-            <LinearLayout
-                android:layout_weight="1"
-                android:padding="12dp"
-                android:id="@+id/walk_group"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center_horizontal">
-
-                <!-- Label -->
-                <TextView
-                    android:layout_gravity="center"
-                    android:textColor="?android:attr/colorPrimary"
-                    android:textSize="18sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="걸음걸이 분석" />
-
-                <TextView
-                    android:gravity="center"
-                    style="@style/TextPrimary"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="평균적으로 학다리걸음에 가까운 걸음걸이 습관을 가지고 있습니다. 해당 걸음걸이를 계속 유지하시는 경우 무릎을 굽히지 않아 계속적으로 무릎에 충격이 가며 연골 연화증이 발생할 수 있습니다."/>
-
-            </LinearLayout>
-
-            <!-- Estimation -->
-            <LinearLayout
-                android:layout_weight="1"
-                android:padding="12dp"
-                android:id="@+id/estimation_group"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_gravity="center_horizontal"
-                android:gravity="center_horizontal">
-
-                <!-- Label -->
-                <TextView
-                    android:layout_gravity="center"
-                    android:textColor="?android:attr/colorPrimary"
-                    android:textSize="18sp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="발생이 우려되는 질환" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:layout_weight="1"
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:src="@drawable/ic_disease_3_knee" />
-                    
-                    <TextView
-                        android:layout_weight="1"
-                        android:layout_gravity="center"
-                        style="@style/TextPrimary"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="연골 연화증"/>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-
-            <!-- Horizontal bias chart -->
-            <com.github.mikephil.charting.charts.LineChart
-                android:id="@+id/horizontal_bias_chart"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:gravity="center_vertical"
-                android:orientation="horizontal" />
-
-            <!-- Label -->
-            <TextView
-                android:layout_gravity="center"
-                android:textColor="?android:attr/colorPrimary"
-                android:textSize="18sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/title_horizontal_bias_variation" />
-
-            <!-- row 0 -->
-            <LinearLayout
-                android:layout_marginTop="24dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <!-- Horizontal bias balance -->
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:padding="12dp"
-                    android:id="@+id/balance_group"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center_horizontal"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/datetime">
-
-                    <!-- Content -->
-                    <TextView
-                        android:textColor="?android:attr/textColorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="28sp"
-                        android:id="@+id/horizontal_balance"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/datetime"
-                        android:text="44%" />
-
-                    <!-- Label -->
-                    <TextView
-                        android:textColor="?android:attr/colorPrimary"
-                        android:textSize="18sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/description_score" />
-
-                </LinearLayout>
-
-                <!-- Walks -->
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:padding="12dp"
-                    android:id="@+id/walks_group"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/balance_group"
-                    app:layout_constraintTop_toBottomOf="@id/datetime"
-                    android:gravity="center_horizontal"
-                    android:orientation="vertical">
-
-                    <!-- Content -->
-                    <TextView
-                        android:textColor="?android:attr/textColorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="28sp"
-                        android:id="@+id/walks"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/datetime"
-                        android:text="39" />
-
-                    <!-- Label -->
-                    <TextView
-                        android:textColor="?android:attr/colorPrimary"
-                        android:textSize="18sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/description_walks"/>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <!-- row 1 -->
-            <LinearLayout
-                android:layout_marginTop="24dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <!-- Horizontal bias balance -->
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:padding="12dp"
-                    android:id="@+id/bias_group"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:gravity="center_horizontal"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/datetime">
-
-                    <!-- Content -->
-                    <TextView
-                        android:textColor="?android:attr/textColorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="28sp"
-                        android:id="@+id/horizontal_bias"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/datetime"
-                        android:text="0.45" />
-
-                    <!-- Label -->
-                    <TextView
-                        android:textColor="?android:attr/colorPrimary"
-                        android:textSize="18sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/description_horizontal_bias" />
-
-                </LinearLayout>
-
-                <!-- Duration -->
-                <LinearLayout
-                    android:layout_weight="1"
-                    android:padding="12dp"
-                    android:id="@+id/duration_group"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/balance_group"
-                    app:layout_constraintTop_toBottomOf="@id/datetime"
-                    android:gravity="center_horizontal"
-                    android:orientation="vertical">
-
-                    <!-- Content -->
-                    <TextView
-                        android:textColor="?android:attr/textColorPrimary"
-                        android:textStyle="bold"
-                        android:textSize="28sp"
-                        android:id="@+id/duration"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/datetime"
-                        android:text="00:20" />
-
-                    <!-- Label -->
-                    <TextView
-                        android:textColor="?android:attr/colorPrimary"
-                        android:textSize="18sp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/description_elapsed_time"/>
-
-                </LinearLayout>
-
-            </LinearLayout>
+            <include
+                layout="@layout/report_detail_lower_part"
+                app:vm="@{vm}" />
 
         </LinearLayout>
 
