--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -42,7 +42,7 @@
 
         <!-- Email -->
         <EditText
-            error="@{vm.loginFormState.usernameError"
+            error="@{vm.loginFormState.usernameError}"
             android:text="@={vm.username}"
             android:id="@+id/username"
             android:layout_width="0dp"
@@ -89,7 +89,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="48dp"
             android:layout_marginBottom="64dp"
-            android:enabled="false"
+            android:enabled="@{vm.loginFormState.dataValid}"
             android:text="@string/action_sign_in"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
